cabal-version:   3.0
name:            seq-test
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
author:          Philg112
maintainer:      nothig

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -w

executable seq-test
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , base          ^>=4.16.4.0
    , http-conduit
    , time
    , text
    , http-types

  hs-source-dirs:   app
  default-language: Haskell2010
